[package]
name = "spaceage"
version = "0.1.0"
edition = "2021"
authors = ["Ilya Agafonov <tairesh.rus@gmail.com>"]
repository = "https://github.com/Tairesh/SpaceAge"
license-file = "LICENSE"

[dependencies.tetra]
version = "0.7"
default-features = false
features = ["serde_support","texture_png","texture_jpeg","font_ttf"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
num_enum = "0.5"
variant_count = "1.1"
enum_dispatch = "0.3"
arrayvec = { version = "0.7", features = ["serde"] }